fixed jumping bug new

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
 }
 
 
+
+
 a {
     text-decoration: none;
     color: black;
@@ -57,6 +59,9 @@ canvas {
     z-index: 1;
     display: block;
 }
+
+.btn-right {margin-left: -10px}
+
 
 .background-img-formalities {
     background-image: url('img/0.Own_Pictures/storyBackgroundNew.png');
@@ -154,8 +159,7 @@ canvas {
 .settings-menu img {
     height: 20px;
     width: 20px;
-    margin-left: 32px;
-
+    margin-left: 12px;
 }
 
 
